add jwt token, auth guard and interceptor

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,29 @@
-AngularAuthAPI/.vs/AngularAuthAPI/FileContentIndex/52a005ea-0066-42b8-b283-c1079a280a8d.vsidx
-AngularAuthAPI/.vs/AngularAuthAPI/FileContentIndex/235be7fb-85ed-45f4-ba34-72d0e3abed08.vsidx
+AngularAuthAPI/AngularAuthAPI/bin/Debug/net8.0/AngularAuthAPI.exe
+AngularAuthAPI/.vs/AngularAuthAPI/DesignTimeBuild/.dtbcache.v2
+AngularAuthAPI/AngularAuthAPI/obj/Debug/net8.0/ref/AngularAuthAPI.dll
+AngularAuthAPI/.vs/AngularAuthAPI/DesignTimeBuild/.dtbcache.v2
+AngularAuthAPI/.vs/AngularAuthAPI/FileContentIndex/5de2383a-33ab-44ef-ae96-27c0d6d51436.vsidx
+AngularAuthAPI/.vs/AngularAuthAPI/FileContentIndex/8a2a4d14-e95d-4288-ab80-2fc98f5c06b0.vsidx
+AngularAuthAPI/.vs/AngularAuthAPI/FileContentIndex/19a2b34f-27f7-4e61-8ba7-ba6abbcb77f9.vsidx
+AngularAuthAPI/.vs/AngularAuthAPI/FileContentIndex/59a37310-cf25-4750-b938-d38b9ff45854.vsidx
+AngularAuthAPI/.vs/AngularAuthAPI/FileContentIndex/85a1b72b-970c-42a0-b628-71e87de196cb.vsidx
+AngularAuthAPI/.vs/AngularAuthAPI/FileContentIndex/612fb0ce-9255-4e44-a53f-e413330755b7.vsidx
+AngularAuthAPI/.vs/AngularAuthAPI/v17/.futdcache.v2
+AngularAuthAPI/.vs/AngularAuthAPI/v17/.suo
+AngularAuthAPI/.vs/ProjectEvaluation/angularauthapi.metadata.v7.bin
+AngularAuthAPI/.vs/ProjectEvaluation/angularauthapi.projects.v7.bin
+AngularAuthAPI/AngularAuthAPI/bin/Debug/net8.0/AngularAuthAPI.dll
+AngularAuthAPI/AngularAuthAPI/bin/Debug/net8.0/AngularAuthAPI.exe
+AngularAuthAPI/AngularAuthAPI/bin/Debug/net8.0/AngularAuthAPI.pdb
+AngularAuthAPI/AngularAuthAPI/obj/Debug/net8.0/AngularAuthAPI.AssemblyInfoInputs.cache
+AngularAuthAPI/AngularAuthAPI/obj/Debug/net8.0/AngularAuthAPI.dll
+AngularAuthAPI/AngularAuthAPI/obj/Debug/net8.0/AngularAuthAPI.pdb
+AngularAuthAPI/AngularAuthAPI/obj/Debug/net8.0/AngularAuthAPI.sourcelink.json
+AngularAuthAPI/AngularAuthAPI/obj/Debug/net8.0/apphost.exe
+AngularAuthAPI/AngularAuthAPI/obj/Debug/net8.0/ref/AngularAuthAPI.dll
+AngularAuthAPI/AngularAuthAPI/obj/Debug/net8.0/refint/AngularAuthAPI.dll
+AngularAuthAPI/.vs/AngularAuthAPI/FileContentIndex/5fb4a8b8-5b18-4bc9-b859-4349c5890173.vsidx
+AngularAuthAPI/.vs/AngularAuthAPI/DesignTimeBuild/.dtbcache.v2
+AngularAuthAPI/.vs/AngularAuthAPI/v17/.suo
+AngularAuthAPI/.vs/AngularAuthAPI/v17/.futdcache.v2
+AngularAuthAPI/.vs/AngularAuthAPI/DesignTimeBuild/.dtbcache.v2
