update refresh token, add reset password login with email, add new endpoints

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,21 @@ AngularAuthAPI/.vs/AngularAuthAPI/DesignTimeBuild/.dtbcache.v2
 AngularAuthAPI/.vs/AngularAuthAPI/v17/.suo
 AngularAuthAPI/.vs/AngularAuthAPI/v17/.futdcache.v2
 AngularAuthAPI/.vs/AngularAuthAPI/DesignTimeBuild/.dtbcache.v2
+AngularAuthAPI/.vs/AngularAuthAPI/FileContentIndex/8fe85fd4-bf2f-4915-972f-f3aaf410e57d.vsidx
+AngularAuthAPI/.vs/AngularAuthAPI/FileContentIndex/4901a747-c778-4023-94f9-a090fcabdc5a.vsidx
+AngularAuthAPI/.vs/AngularAuthAPI/DesignTimeBuild/.dtbcache.v2
+AngularAuthAPI/.vs/AngularAuthAPI/DesignTimeBuild/.dtbcache.v2
+AngularAuthAPI/.vs/AngularAuthAPI/DesignTimeBuild/.dtbcache.v2
+AngularAuthAPI/.vs/AngularAuthAPI/FileContentIndex/6bcda870-308d-494e-8a0f-cd2c2222bf0d.vsidx
+AngularAuthAPI/.vs/AngularAuthAPI/FileContentIndex/19a2b34f-27f7-4e61-8ba7-ba6abbcb77f9.vsidx
+AngularAuthUI/src/app/interceptors/token.interceptor.ts
+AngularAuthAPI/.vs/AngularAuthAPI/FileContentIndex/8a2a4d14-e95d-4288-ab80-2fc98f5c06b0.vsidx
+AngularAuthAPI/.vs/AngularAuthAPI/FileContentIndex/59a37310-cf25-4750-b938-d38b9ff45854.vsidx
+AngularAuthAPI/.vs/AngularAuthAPI/FileContentIndex/85a1b72b-970c-42a0-b628-71e87de196cb.vsidx
+AngularAuthAPI/.vs/AngularAuthAPI/FileContentIndex/612fb0ce-9255-4e44-a53f-e413330755b7.vsidx
+AngularAuthAPI/.vs/AngularAuthAPI/FileContentIndex/c9797842-eaa9-4f56-b06e-3628f36481ec.vsidx
+AngularAuthAPI/.vs/AngularAuthAPI/FileContentIndex/cac20d70-8a85-4d39-87b3-026ea1cb3873.vsidx
+AngularAuthAPI/.vs/AngularAuthAPI/FileContentIndex/e6ec2729-6959-4763-b4ee-42d3a4d839a3.vsidx
+AngularAuthAPI/.vs/AngularAuthAPI/v17/.suo
+AngularAuthAPI/.vs/AngularAuthAPI/FileContentIndex/51475f27-a058-4d2c-8976-24a7aa48235c.vsidx
+AngularAuthAPI/.vs/AngularAuthAPI/DesignTimeBuild/.dtbcache.v2
