--- a/AngularAuthAPI/AngularAuthAPI/appsettings.json
+++ b/AngularAuthAPI/AngularAuthAPI/appsettings.json
@@ -1,12 +1,19 @@
 {
-   "Logging":{
-      "LogLevel":{
-         "Default":"Information",
-         "Microsoft.AspNetCore":"Warning"
-      }
-   },
-   "AllowedHosts":"*",
-   "ConnectionStrings":{
-	  "SQLServer": "Data Source=(localdb)\\localDb1;Initial Catalog=AuthAPIDb;Integrated Security=True;"
-   }
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SQLServer": "Data Source=(localdb)\\localDb1;Initial Catalog=AuthAPIDb;Integrated Security=True;"
+  },
+  "EmailSettings": {
+    "From": "myMail@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 465,
+    "UserName": "myMail@gmail.com",
+    "Password": "mysecretPassword" // provide your password for this app from https://myaccount.google.com/apppasswords?
+  }
 }
